--- a/Movie_recommendation_system.ipynb
+++ b/Movie_recommendation_system.ipynb
@@ -90,9 +90,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Rating = pd.read_csv('C:/Users/vijay/OneDrive/Desktop/Datascience/Wecareer/Portfolio/Portfolio/Movie recomendation/ratings.csv')\n",
-    "Movies = pd.read_csv('C:/Users/vijay/OneDrive/Desktop/Datascience/Wecareer/Portfolio/Portfolio/Movie recomendation/movies.csv')\n",
-    "Tags = pd.read_csv('C:/Users/vijay/OneDrive/Desktop/Datascience/Wecareer/Portfolio/Portfolio/Movie recomendation/tags.csv')"
+    "Rating = pd.read_csv('/Movie recomendation/ratings.csv')\n",
+    "Movies = pd.read_csv('/Movie recomendation/movies.csv')\n",
+    "Tags = pd.read_csv('/Movie recomendation/tags.csv')"
    ]
   },
   {
